# opensourcenav

./: .gitignore
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  scratch.py
backend/app/: config.py  main.py
backend/app/agents/: chat_agent.py  docs_graph.py  repo_finder_graph.py
backend/app/agents/nodes/: __init__.py  analyze_code.py  analyze_structure.py  embed_repo.py  fetch_repo.py  generate_api_ref.py  generate_components.py  generate_diagrams.py  generate_guides.py  generate_overview.py  search_repos.py  store_docs.py
backend/app/db/: mongodb.py  qdrant.py
backend/app/models/: __init__.py  chat.py  docs.py  queue.py  repos.py  user.py
backend/app/services/: embedding_service.py  github_service.py  llm_service.py  queue_service.py  repo_session_store.py
backend/app/utils/: chunker.py  helpers.py  json_extract.py
easygit-frontend/: .env.local.example  README.md  package-lock.json  package.json
easygit-frontend/app/: globals.css  layout.tsx
easygit-frontend/app/(root)/: layout.tsx
easygit-frontend/lib/: github-api.ts
easygit-frontend/store/: index.ts  issue-store.ts  repository-store.ts  resolution-store.ts  tutorialstore.ts
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chatbot.tsx  DocsSidebar.tsx  FileExplorer.tsx  MarkdownRenderer.tsx  MobileDocsNav.tsx  Navbar.tsx
repo-qa/: README.md  requirements.txt  start_tutorial_server.sh
repo-qa/app/: main.py
repo-qa/templates/: base_readme_template.md
(+72 files in other folders)
