[project]
name = "EasyGit-backend"
version = "1.0.0"
description = "Generate modern documentation for any GitHub repository"
requires-python = ">=3.11"

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.0",
    "websockets>=15.0.0",

    # LLM & Agents
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.0",
    "google-genai>=1.0.0",
    "langgraph>=0.4.0",

    # Vector DB
    "qdrant-client>=1.14.0",

    # MongoDB
    "motor>=3.7.0",
    "pymongo>=4.12.0",

    # GitHub
    "httpx>=0.28.0",
    "GitPython>=3.1.0",

    # Utilities
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
